# sellscale-challenge

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/database/: crud.py  db.py  models.py
backend/app/exceptions/: portfolioExceptions.py  userExceptions.py
backend/app/routes/: portfolio.py  stock.py  user.py
backend/app/schemas/: stock.py  user.py
backend/app/service/: portfolio_service.py  user_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BuySell.tsx  CompanySearch.tsx  InactivityTimer.tsx  Navbar.tsx  ProtectedRoute.tsx  StockChart.tsx  StockInfo.tsx  StyledButton.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Login.tsx  Portfolio.tsx  Register.tsx  Stocks.tsx  UserDetails.tsx
frontend/src/services/: auth.ts  portfolio.ts  stock.ts  wallet.ts
frontend/src/utils/: walletValidation.ts
